# Vigine

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
build_contract/: vigine.sln  (+16 more)
example/: CMakeLists.txt  main.cpp
example/experimental/postgres_demo/: CMakeLists.txt  main.cpp
example/experimental/postgres_demo/state/: errorstate.h  initstate.h
example/experimental/postgres_demo/task/: transitiontask.cpp  transitiontask.h
example/experimental/postgres_demo/task/data/: addsomedatatask.cpp  addsomedatatask.h  readsomedatatask.cpp  readsomedatatask.h  removesomedatatask.cpp  removesomedatatask.h
example/fanout_fsm/: .gitkeep  CMakeLists.txt  README.md  main.cpp
example/handler/: windoweventhandler.cpp  windoweventhandler.h
example/parallel_fsm/: .gitkeep  CMakeLists.txt  README.md  main.cpp
example/postgresql/: main.cpp
example/postgresql/state/: errorstate.h
example/postgresql/task/data/: addsomedatatask.cpp
example/postgresql/task/db/: checkbdshecmetask.cpp  initbdtask.cpp  initbdtask.h
example/state/: closestate.cpp  closestate.h  errorstate.cpp  errorstate.h  initstate.h  workstate.cpp  workstate.h
example/task/: addsomedatatask.cpp  addsomedatatask.h  checkbdshecmetask.cpp  checkbdshecmetask.h  initbdtask.cpp  initbdtask.h  initwindowtask.cpp  initwindowtask.h  readsomedatatask.cpp  readsomedatatask.h  removesomedatatask.cpp  runwindowtask.cpp  runwindowtask.h
example/task/data/: addsomedatatask.cpp  readsomedatatask.cpp  removesomedatatask.cpp
example/task/db/: checkbdshecmetask.cpp  initbdtask.cpp
example/task/window/: initwindowtask.cpp  initwindowtask.h  processinputeventtask.cpp  processinputeventtask.h  runwindowtask.cpp  runwindowtask.h  windoweventsignal.h
example/threaded_bus/: .gitkeep  CMakeLists.txt  README.md  main.cpp
example/window/: CMakeLists.txt  main.cpp  texteditstate.h
example/window/assets/text/: message.txt
example/window/component/: settingspanelcomponent.h  texteditorcomponent.h
example/window/handler/: windoweventhandler.cpp  windoweventhandler.h
example/window/service/: uiservice.cpp  uiservice.h
example/window/services/: texteditorservice.cpp  texteditorservice.h  wellknown.h
example/window/shader/: cube.frag  cube.vert  glyph.frag  glyph.vert  glyph_sdf.frag  glyph_sdf.vert  grid.frag  grid.vert  panel.frag  panel.vert  pyramid.frag  pyramid.vert  sphere.frag  sphere.vert  sun.frag  sun.vert  textured_plane.frag  textured_plane.vert  textvoxel.frag  textvoxel.vert
example/window/state/: closestate.h  initstate.cpp  workstate.cpp  workstate.h
example/window/system/: manipulationsystem.cpp  manipulationsystem.h  selectionsystem.cpp  selectionsystem.h  texteditorsystem.cpp  texteditorsystem.h  uisystem.cpp  uisystem.h
example/window/task/vulkan/: imageloader.cpp  imageloader.h  imageloader_new.cpp  initvulkantask.cpp  initvulkantask.h  loadtexturestask.cpp  loadtexturestask.h  rendercubetask.cpp  rendercubetask.h  setupcubetask.cpp  setupcubetask.h  setuphelpergeometrytask.cpp  setuphelpergeometrytask.h  setuptextedittask.cpp  setuptextedittask.h  setuptexttask.cpp  setuptexttask.h  setuptexturedplanestask.cpp  setuptexturedplanestask.h
example/window/task/window/: initwindowtask.cpp  initwindowtask.h  processinputeventtask.cpp  processinputeventtask.h  runwindowtask.cpp  runwindowtask.h  windoweventpayload.cpp  windoweventpayload.h  windoweventsignal.cpp
test/: CMakeLists.txt  EntityTest.cpp  concepts.h  test_vigine.cpp
test/actorhost/: smoke_test.cpp
test/architecture/: AbstractComponentTest.cpp  AbstractServiceTest.cpp  AbstractStateTest.cpp  AbstractStatusTest.cpp  AbstractSystemTest.cpp  AbstractTaskTest.cpp  ArchitectureTest.cpp  EngineTest.cpp  StateMachineTest.cpp  TaskFlowTest.cpp  concepts.h
test/architecture/ecs/: AbstractComponentTest.cpp  AbstractEntityTest.cpp  AbstractSystemTest.cpp
test/channelfactory/: smoke_test.cpp
test/component/: ComponentManagerTest.cpp
test/contract/: scenario_01_engine_lifecycle.cpp  scenario_02_threading_primitives.cpp  scenario_03_messaging_bus.cpp  scenario_04_signal_emitter.cpp  scenario_05_event_scheduler.cpp  scenario_06_topic_isolation.cpp  scenario_07_channel_backpressure.cpp  scenario_08_request_response.cpp  scenario_09_reactive_pipeline.cpp  scenario_10_actor_host.cpp  scenario_11_pipeline_builder.cpp  scenario_12_service_lifecycle.cpp  scenario_13_ecs_entity_lifecycle.cpp  scenario_14_statemachine_hsm.cpp  scenario_15_subscriber_serialization.cpp  scenario_16_dtor_blocks_in_flight.cpp  scenario_17_fsm_thread_affinity.cpp  scenario_18_fsm_async_transition.cpp  scenario_19_parallel_for.cpp  scenario_21_stale_engine_token.cpp  scenario_22_token_expiration_callback.cpp  scenario_23_token_expires_on_transition.cpp  scenario_24_fresh_token_in_new_state.cpp
test/contract/fixtures/: contract_helpers.h  engine_fixture.h
test/ecs/: smoke_test.cpp
test/engine/: smoke_test.cpp
test/engine_token/: smoke_test.cpp
test/eventscheduler/: smoke_test.cpp
test/graph/: contract_async_timeout.cpp  contract_fanout.cpp  contract_generational_id.cpp  contract_hsm_bubble.cpp  contract_iedge.cpp  contract_igraph.cpp  contract_inode.cpp  contract_query.cpp  contract_result_deferred.cpp  contract_traversal.cpp  smoke_test.cpp
test/graph/fixtures/: graph_fixture_7n10e.h
test/messaging/: smoke_test.cpp
test/payload/: smoke_test.cpp
test/pipelinebuilder/: smoke_test.cpp
test/platform/: linux_smoke_test.cpp
test/reactivestream/: smoke_test.cpp
test/requestbus/: smoke_test.cpp
test/script/: test_check_cross_platform.py  test_check_graph_purity.py  test_check_naming_convention.py  test_check_strict_encapsulation.py  test_check_wrapper_encapsulation.py
test/scripts/: test_check_cross_platform.py  test_check_naming_convention.py  test_check_strict_encapsulation.py  test_check_wrapper_encapsulation.py
test/service/: smoke_test.cpp
test/statemachine/: smoke_test.cpp
test/threading/: sync_smoke_test.cpp  threadmanager_smoke_test.cpp
test/topicbus/: smoke_test.cpp
(+1850 files in other folders)
